# SimpleGeometryCalc

./: README.md  pyproject.toml
SimpleGeometry/: __init__.py
