[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "SimpleGeometryCalc"
version = "0.0.6"
description = "A small library to calculate most variables of shapes from just one!"
authors = [
    { name = "Tatpoato" }
]
maintainers = [
    {name = "Tatpoato"}
]
keywords = ["Geometry", "Simple", "simple", "geometry", "calc"]
readme = "README.md"
# license = "Custom / Non modifiable for Commercial use."

[tool.hatch.build.targets.wheel]
packages = ["SimpleGeometryCalc"]
